Q1: remove content inherited from Q3

--- a/q1-why-cog-arch/presentation.tex
+++ b/q1-why-cog-arch/presentation.tex
@@ -35,7 +35,7 @@
 %--------------------------------------------------------------------------
 % General presentation settings
 %--------------------------------------------------------------------------
-\title{CogArch4socialHRI}
+\title{Cognitive Architectures?}
 \subtitle{Q1 -- Why should you use cognitive architectures - how would they
 benefit your research as a theoretical framework, a tool and/or a methodology?}
 \date{7th March 2016\\ {\tiny \url{https://sites.google.com/site/cogarch4socialhri2016/}}}
