Q1: clean-up 'Discusion directions'

--- a/q1-why-cog-arch/presentation.tex
+++ b/q1-why-cog-arch/presentation.tex
@@ -115,8 +115,7 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
         \item ...
     \end{itemize}
 
-    \refToContrib{Someone (15 min)}
-    \refToContrib{Someone (15 min)}
+    35 minutes of open discussion + 2 presentations
 
 \end{frame}
 
