Q1: added figures 'Islands of Cognition'

--- a/q1-why-cog-arch/presentation.tex
+++ b/q1-why-cog-arch/presentation.tex
@@ -105,6 +105,10 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
 \end{frame}
 
 
+\imageframe[black]{}{islands1}
+\imageframe[black]{}{islands2}
+\imageframe[black]{}{islands3}
+\imageframe[black]{}{islands4}
 
 \begin{frame}{Bringing the strands together}
     
