--- a/q2-inspiration-from-human-cognition/presentation.tex
+++ b/q2-inspiration-from-human-cognition/presentation.tex
@@ -17,7 +17,7 @@
 %--------------------------------------------------------------------------
 % Load theme
 %--------------------------------------------------------------------------
-\usetheme{hri}
+\usetheme[basicfont]{hri}
 
 \usepackage{dtklogos} % must be loaded after theme
 \usepackage{tikz}
@@ -37,7 +37,7 @@
 \title{Models of Human Cognition}
 \subtitle{Q2 -- Should cognitive architectures for social interaction be
 inspired and/or limited by models of human cognition?}
-\date{}
+\date{7th March 2016\\ {\tiny \url{https://sites.google.com/site/cogarch4socialhri2016/}}}
 \author{}
 \institute{\includegraphics[height=15mm]{plymouth-logo}}
 %\\Centre for Robotics \& Neural
@@ -58,226 +58,9 @@ inspired and/or limited by models of human cognition?}
 %\imageframe[Children playing with\\the Ranger robot]{photo-fullscreen.jpg}
 %\imageframe{photo-fullscreen.jpg}
 
-\begin{frame}{Cognitive Architecture?}
-\centering
-        \resizebox{!}{0.7\paperheight}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-        
+\begin{frame}{Role of human cognition?}
 
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/5}, 
-                level 2 concept/.append style={sibling angle=120}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept] {Cognition}
-            [clockwise from=-30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception}
-                [clockwise from=40]
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (dialog) {Communication} }
-            }
-            child[concept color=hriSec2Comp,text=white] { node[concept] (krr) {Knowledge Representation} 
-                [clockwise from=-30]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (memory) {Memory} }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] (tom) {Theory of Mind} }
-            }
-            child[concept color=hriSec2,text=white] { node[concept] (action) {Action Execution} 
-                [counterclockwise from=110]
-                child[concept color=hriSec3,text=white] { node[concept] (plan) {Task Planning} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (comm) {Communication} }
-            }
-            child[concept color=hriSec3Comp,text=white] { node[concept] (learning) {Learning} 
-                [counterclockwise from=130]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (adapt) {Adaptation} }
-            }
-            child[concept color=hriSec3CompDark,text=white] { node[concept] (reason) {Reasoning} 
-                [clockwise from=110]
-                child[concept color=hriSec3Dark,text=white] { node[concept] {Problem solving} }
-                child[concept color=hriSec1Dark,text=white] { node[concept] (decision) {Decision making} } 
-            };
-
-        \onslide<2>{
-        \path (decision) edge[->, bend left] (action);
-        \path (percept) edge[->, bend left] (action);
-        \path (krr) edge[<->, bend right] (reason);
-        \path (plan) edge[<->] (reason);
-        \path (percept) edge[->, bend left] (krr);
-        \path (krr) edge[->, bend left] (plan);
-        \path (learning) edge[->, bend left] (reason);
-        \path (learning) edge[->, bend left] (krr);
-        \path (percept) edge[<->, bend left] (learning);
-        \path (dialog) edge[->, bend left] (tom);
-        \path (tom) edge[->, bend left] (comm);
-        \path (percept) edge[<->, bend left] (memory);
-        }
-
-
-        \end{tikzpicture}
-    }
-\end{frame}
-
-\begin{frame}{}
-
-    \centering
-
-    \begin{exampleblock}{Cognitive Architectures Building $\neq$ Science of Integration}
-        The function may be a {\Medium byproduct} of the architecture
-    \end{exampleblock}
-    \vspace{2em}
-    \uncover<2>{
-        At this stage, we should not commit to any architecture,\\nor internal mechanism
-    }
-
-
-\end{frame}
-
-
-\begin{frame}{No commitments to internal mechanisms}
-    \centering
-        \resizebox{!}{0.7\paperheight}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-        
-         \onslide<1>{
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/5}, 
-                level 2 concept/.append style={sibling angle=120}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept color=white] {}
-            [clockwise from=-30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception}
-                [clockwise from=40]
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (dialog) {Communication} ;};
-            }
-            child[concept color=hriSec2Comp,text=white] { node[concept] (krr) {Knowledge Representation} 
-                [clockwise from=-30]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (memory) {Memory}; }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] (tom) {Theory of Mind}; };
-            }
-            child[concept color=hriSec2,text=white] { node[concept] (action) {Action Execution} 
-                [counterclockwise from=110]
-                child[concept color=hriSec3,text=white] { node[concept] (plan) {Task Planning}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (comm) {Communication}; };
-            }
-            child[concept color=hriSec3Comp,text=white] { node[concept] (learning) {Learning} 
-                [counterclockwise from=130]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (adapt) {Adaptation}; };
-            }
-            child[concept color=hriSec3CompDark,text=white] { node[concept] (reason) {Reasoning} 
-                [clockwise from=110]
-                child[concept color=hriSec3Dark,text=white] { node[concept] {Problem solving};}
-                child[concept color=hriSec1Dark,text=white] { node[concept] (decision) {Decision making}; } ;
-            };
-        }
-         \onslide<2>{
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/5}, 
-                level 2 concept/.append style={sibling angle=120}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept color=white] {}
-            [clockwise from=-30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception}
-                [clockwise from=40]
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (dialog) {Communication} ;};
-            }
-            child[concept color=white,text=gray] { node[concept] (krr) {Knowledge Representation} 
-                [clockwise from=-30]
-                child[concept color=white,text=gray] { node[concept] (memory) {Memory}; }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] (tom) {Theory of Mind}; };
-            }
-            child[concept color=hriSec2,text=white] { node[concept] (action) {Action Execution} 
-                [counterclockwise from=110]
-                child[concept color=white,text=gray] { node[concept] (plan) {Task Planning}; }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] (comm) {Communication}; };
-            }
-            child[concept color=white,text=gray] { node[concept] (learning) {Learning} 
-                [counterclockwise from=130]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] (adapt) {Adaptation}; };
-            }
-            child[concept color=white,text=gray] { node[concept] (reason) {Reasoning} 
-                [clockwise from=110]
-                child[concept color=white,text=gray] { node[concept] {Problem solving};}
-                child[concept color=white,text=gray] { node[concept] (decision) {Decision making}; } ;
-            };
-        }
-
-        \end{tikzpicture}
-    }
-
-
-\end{frame}
-
-\begin{frame}{}
-
-    \centering
-
-    \begin{exampleblock}{Cognitive Architectures Building $\neq$ Science of Integration}
-        The function may be a {\Medium byproduct} of the architecture
-    \end{exampleblock}
-    \vspace{2em}
-    What are the {\Medium surface} cognitive competencies\\required by {\Medium social interaction}?
-
-
-\end{frame}
-
-
-
-\begin{frame}{Functions for Social Cognition}
-\centering
-        \resizebox{!}{0.7\paperheight}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-        
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriWarmGreyLight,text=hriWarmGreyDark]
-            node[concept] {Social\\Cognition in HRI}
-            [clockwise from=30]
-            child[concept color=hriSec1,text=white] { node[concept] (percept) {Perception of Human's State}
-                [clockwise from=120]
-                child[concept color=hriSec3Dark,text=white] { node[concept]{Emotions} }
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Inference of mental models} }
-            }
-            child[concept color=hriSec2Comp,text=white,grow=-30] { node[concept] (knowledge) {Social Knowledge} 
-                [counterclockwise from=-120]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Social rules} }
-                child[concept color=hriSec3Comp,text=black] { node[concept] {Social context} }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] {Common-sense} }
-            }
-            child[concept color=hriSec3Comp,text=black, grow=-120] { node[concept] (comm) {Communication} 
-                [counterclockwise from=180]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Verbal} }
-                child[concept color=hriSec1Dark,text=white] { node[concept] {Non-verbal} }
-            }
-            child[concept color=hriSec3,text=white,grow=180] { node[concept] (dynamics) {Interaction Dynamics} 
-                [clockwise from=180]
-                child[concept color=hriSec2Dark,text=white] { node[concept] {Long-term interaction} }
-            }
-            child[concept color=hriSec2,text=black, grow=120] { node[concept] (action) {Human-aware actions} 
-                [counterclockwise from=120]
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Action, behaviour recognition} }
-                child[concept color=hriSec3,text=white] { node[concept] {Joint actions} }
-            };
-
-
-        \end{tikzpicture}
-    }
-%    \\
-%    Learn -- Memorize -- Reason -- Represent -- Assess Situation
-\end{frame}
-
-
-\begin{frame}{Perception of human's cognitive state}
-
-    \begin{multicols}{2}
+	\begin{multicols}{2}
         \resizebox{0.7\columnwidth}{!}{%
             \begin{tikzpicture}[
                     >=latex,
@@ -287,11 +70,11 @@ inspired and/or limited by models of human cognition?}
                 level 1 concept/.append style={sibling angle=360/6}, 
                 level 2 concept/.append style={sibling angle=60}, 
             concept color=hriSec1,text=white]
-            node[concept] {Perception of Human's State}
+            node[concept] {Human Cognition?}
                 [clockwise from=60]
-                child[concept color=hriSec3Dark,text=white] { node[concept]{Emotions} }
-                child[concept color=hriSec2Dark,text=white] { node[concept]{Attention} }
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Inference of mental models}};
+                child[concept color=hriSec3Dark,text=white] { node[concept]{1. Inspiration} }
+                child[concept color=hriSec2Dark,text=white] { node[concept]{2. Limitations} }
+                child[concept color=hriSec2CompDark,text=white] { node[concept] {3. Based on}};
 
 
         \end{tikzpicture}
@@ -299,199 +82,74 @@ inspired and/or limited by models of human cognition?}
     \vfill
     \columnbreak
 
-    {\Medium Emotions}
+    {\Medium 1. Inspiration from Human Cognition}
 
-    Recognition {\tiny \Medium facial, non-verbal acoustic, verbal features / sentient analysis}\\
-    Interpretation {\tiny \Medium empathy,...}
+    {\scriptsize -- Modelling aspects of human cognition \\-- Subsequent application to robots}
 
-    {\Medium Attention}
+    {\Medium 2. Take both Inspiration and Constraints from Human Cognition}
 
-    Visual attention\\
-    Joint attention
+    {\scriptsize -- Examine human cognition limitations \\-- Constrain competencies of the robot}
 
-    {\Medium Mental Modelling}
+    {\Medium 3. Base entirely on Human Cognition}
 
-    User modelling\\
-    (perceptual) theory of mind~\cite{lemaignan2015mutual}
+    {\scriptsize -- Functions and architecture structure \\-- Typically neural-inspired implementation}
 
-    \refToContrib{Alexis' contribution}
-
-    \end{multicols}
-\end{frame}
-
-\begin{frame}{Social Knowledge}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec2Comp,text=white]
-            node[concept] (knowledge) {Social Knowledge} 
-                [counterclockwise from=-60]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Social rules} }
-                child[concept color=hriSec3Comp,text=black] { node[concept] {Social context} }
-                child[concept color=hriSec3CompDark,text=white] { node[concept] {Common-sense}};
-
-
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-    {\Medium Common-sense}
-
-    Hand-coded ontologies\\
-    Automated web-scrapping~\cite{tenorth2010understanding}
-
-    {\Medium Social context}
-
-    ?
-
-    {\Medium Social Rules}
-
-    Proxemics\\
-    Social norms\\
-    Moral norms\\
-    \refToContrib{Vasanth's contribution}
-    Ethics
-
-
-    \end{multicols}
-\end{frame}
-
-\begin{frame}{Communication}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec3Comp,text=black]
-            node[concept] (comm) {Communication} 
-                [counterclockwise from=-30]
-                child[concept color=hriSec1CompDark,text=white] { node[concept] {Verbal} }
-                child[concept color=hriSec1Dark,text=white] { node[concept] {Non-verbal} };
-
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-
-    Review~\cite{mavridis2015review}:
-    \begin{itemize}
-        \item Breaking the ``simple commands only'' barrier;
-        \item Mixed initiative dialogue;
-        \item Symbol grounding problem;
-        \item Motor correlates
-        \item ...
-    \end{itemize}
-
-
-    {\Medium Non-verbal}
-
-    Behavioural alignment
-
-    {\Medium Verbal}
-
-    Situated dialogue~\cite{kruijff2010situated}
-
-    \end{multicols}
-
-\end{frame}
-
-\begin{frame}{Interaction Dynamics}
-
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
-
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec3,text=white]
-            node[concept] (dynamics) {Interaction Dynamics} 
-                [clockwise from=0]
-                child[concept color=hriSec2Dark,text=white] { node[concept] {Long-term interaction} };
-
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
-
-
-
-
-    Behavioural alignment
-
-    {\Medium Long-term interaction}
-
-    Situated dialogue~\cite{kruijff2010situated}
+    \refToContrib{Someone here...}
 
     \end{multicols}
 
 \end{frame}
 
 
-\begin{frame}{Human-aware actions}
+%\begin{frame}{}
 
-    \begin{multicols}{2}
-        \resizebox{0.7\columnwidth}{!}{%
-            \begin{tikzpicture}[
-                    >=latex,
-                every edge/.style={<-, draw, very thick}]
+%    \centering
 
-            \path[small mindmap, 
-                level 1 concept/.append style={sibling angle=360/6}, 
-                level 2 concept/.append style={sibling angle=60}, 
-            concept color=hriSec2,text=black]
-            node[concept] (action) {Human-aware actions} 
-                [counterclockwise from=-30]
-                child[concept color=hriSec2CompDark,text=white] { node[concept] {Action, behaviour recognition} }
-                child[concept color=hriSec3,text=white] { node[concept] {Joint actions} };
-        \end{tikzpicture}
-    }
-    \vfill
-    \columnbreak
+%    \begin{exampleblock}{Cognitive Architectures Building $\neq$ Science of Integration}
+%        The function may be a {\Medium byproduct} of the architecture
+%    \end{exampleblock}
+%    \vspace{2em}
+%    \uncover<2>{
+%        At this stage, we should not commit to any architecture,\\nor internal mechanism
+%    }
+
+%\end{frame}
 
 
+\begin{frame}{1. Inspiration from Human Cognition}
 
-
-    {\Medium Action \& Behaviour recognition}
-
-    {\Medium Joint action}
-
-
-    \end{multicols}
+	Dude...
 
 \end{frame}
+
+
+\begin{frame}{2. Also take Constraints from Human Cognition}
+
+	Dude...
+
+\end{frame}
+
+
+\begin{frame}{3. Base entirely on Human Cognition}
+
+	Dude...
+
+\end{frame}
+
 
 \begin{frame}{Discussion directions}
     
 
     \begin{itemize}
-        \item Is listing functional requirements the right approach?\\ {\Medium surface competencies $\Rightarrow$ frame issue?}
-        \item What are the missing ones for social interaction?\\ {\Medium imitation, self-awareness,...?}
-        \item Functions interdependencies? Functional entanglement?
-        \item Reference tasks? Metrics? Benchmarks? At what level are they useful? (single function? group of functions? whole architecture only?)
+        \item stuff
     \end{itemize}
 
     40 minutes of open discussion, plus:
-    \refToContrib{Vasanth's presentation (15 min)}
-    \refToContrib{Alexis' presentation (15 min)}
+    \refToContrib{someone (15 min)}
+    \refToContrib{possibly someone else (15 min)}
 
 \end{frame}
+
 
 
 \begin{frame}{Bibliography}
