Intro: added some background, context and desired outcomes
will probably need to be refined - and there is a lack of visual
interest (i.e. pictures)!

--- a/intro/presentation.tex
+++ b/intro/presentation.tex
@@ -15,7 +15,7 @@
 \usepackage{booktabs}
 
 
-\usetheme{hri}
+\usetheme[basicfont]{hri}
 
 \usepackage{dtklogos} % must be loaded after theme
 \usepackage{tikz}
@@ -50,10 +50,40 @@ Interaction}
 
 \maketitle
 
-\imageframe[black]{}{islands1}
-\imageframe[black]{}{islands2}
-\imageframe[black]{}{islands3}
-\imageframe[black]{}{islands4}
+%\imageframe[black]{}{islands1}
+%\imageframe[black]{}{islands2}
+%\imageframe[black]{}{islands3}
+%\imageframe[black]{}{islands4}
+
+
+\begin{frame}{Context}
+
+	\begin{itemize}
+	
+	\item<1-> This is the Second Workshop on Cognitive Architectures for HRI \\ {\footnotesize -- First one held in Bielefeld at HRI'14}
+	
+	\item<2-> First incarnation focused generally on Cognitive Architectures \\ {\footnotesize -- Keynotes from three differing approaches \\-- Somewhat lacking in discussion time!}
+	
+	\item<3-> This 2nd version focusses specifically on CogArch for \emph{Social} HRI \\ {\footnotesize -- Structure of this workshop intended to facilitate this exploration \\-- Plenty of time for discussion!}
+	
+	\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}{Motivation}
+
+	\begin{itemize}
+	
+	\item<1-> CogArch's seek to account for cognition using domain-general structures, mechanisms and processes \\ {\footnotesize -- Perspective from CogSci / Psychology \\-- Emphasis on domain generality, though naturally derived from domain-specific observations}
+	
+	\item<2-> Social Interaction as a highly complex problem \\ {\footnotesize -- Multiple facets to be taken into account \\-- Not fully characterised in humans}
+	
+	\item<3-> CogArch's as a means of drawing the available human-based evidence into HRI \\ {\footnotesize -- Formalising observations of phenomena into structures and systems \\-- Means of shaping and framing research questions}
+	
+	\end{itemize}
+
+\end{frame}
 
 
 \begin{frame}{Six questions to articulate the discussions}
@@ -114,6 +144,20 @@ Interaction}
     Interacting Socially with Humans}
 
     \end{itemize}
+\end{frame}
+
+\begin{frame}{Desired Outcomes}
+    
+    \begin{itemize}
+    
+    \item To bringing concepts and methods of Cognitive Architectures to the attention of the HRI community \\ {\footnotesize -- Specifically highlight the necessity for \emph{social} HRI}
+    
+    \item To facilitate discussion between participants from different backgrounds by providing a common frame of reference \\ {\footnotesize -- The six questions}
+    
+    \item To generate a reference point for the community: organise a Special Issue (open call) \\ {\footnotesize -- Interest from ``IEEE Trans. on Cognitive and Developmental Systems'' \\-- Answering the six questions will be part of the review criteria!}
+    
+    \end{itemize}
+    
 \end{frame}
 
 \begin{frame}[plain]{}
