Q1: fixed figure insertion given update to template

--- a/q1-why-cog-arch/presentation.tex
+++ b/q1-why-cog-arch/presentation.tex
@@ -240,10 +240,10 @@ benefit your research as a theoretical framework, a tool and/or a methodology?}
 \end{frame}
 
 
-\imageframe[Islands of desired Cognitive Functionality]{figs/islands1}{}
-\imageframe[Linking islands together: the technical integration approach]{figs/islands2}{}
-\imageframe[Exploring common underlying principles of the islands]{figs/islands3}{}
-\imageframe[Constructing cognitive architectures from these principles]{figs/islands4}{}
+\imageframe[white]{Islands of desired Cognitive Functionality}{figs/islands1}
+\imageframe[white]{Linking islands together: the technical integration approach}{figs/islands2}
+\imageframe[white]{Exploring common underlying principles of the islands}{figs/islands3}
+\imageframe[white]{Constructing cognitive architectures from these principles}{figs/islands4}
 
 
 \begin{frame}{Discussion: why use CogArch for social HRI?}
