Q4: 'symbolic arch -> semantics close to human level'

--- a/q4-fundamental-computational-structures/presentation.tex
+++ b/q4-fundamental-computational-structures/presentation.tex
@@ -190,9 +190,10 @@ symbolic, sub-symbolic, hybrid, ...)?}
 \begin{frame}{Highlights}
 
     \begin{itemize}
-        \item {\Medium explicit}, {\Medium high-level semantics} (good for NLP for instance!)
         \item {\Medium well-established theoretical grounds} in formal logics
+        \item {\Medium explicit}, {\Medium high-level semantics} (good for NLP for instance!)
         \item good engineering properties (modular, loose coupling,...)
+        \item $\Rightarrow$ {\Medium close to the human level} (both for the users and the developers)
     \end{itemize}
     
     \only<2>{
@@ -501,9 +502,10 @@ symbolic, sub-symbolic, hybrid, ...)?}
         \centering{\Medium Symbolic}
 
     \begin{itemize}
-        \item {\Medium explicit}, {\Medium high-level semantics} (good for NLP for instance!)
         \item {\Medium well-established theoretical grounds} in formal logics
+        \item {\Medium explicit}, {\Medium high-level semantics}
         \item good engineering properties (modular, loose coupling,...)
+        \item $\Rightarrow$ {\Medium close to the human level} (both for the users and the developers)
         \item {\Medium very successful} so far
         \item {\Medium fundamentally top-down} approach $\Rightarrow$ somewhat difficult to match with
             the constructive approach of developmental psychology
